--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "export NODE_ENV=test || \"SET NODE_ENV=test\" && mocha users/**/*.test.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
     "mocha": "^5.2.0"
   },
   "dependencies": {
+    "express": "^4.16.3",
     "mongoose": "^5.2.5"
   }
 }
