--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "export NODE_ENV=test || \"SET NODE_ENV=test\" && mocha users/**/*.test.js"
+    "test": "NODE_ENV=test mocha users/**/*.test.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "express": "^4.16.3",
+    "mongodb": "^3.1.1",
     "mongoose": "^5.2.5"
   }
 }
