--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha users/test"
+    "test": "mocha users/test",
+    "test-watch": "nodemon --exec \"npm test\""
   },
   "repository": {
     "type": "git",
