- change testing config - mongoose delete method

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha users/test",
+    "test": "mocha users/test/**/*.test.js",
     "test-watch": "nodemon --exec \"npm test\""
   },
   "repository": {
