--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "supertest": "^3.1.0"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "mongodb": "^3.1.1",
     "mongoose": "^5.2.6"
