--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha muber/test/**/*.test.js",
+    "test": "export NODE_ENV=test || \"SET NODE_ENV=test\"&& mocha muber/test/**/*.test.js",
     "test-watch": "nodemon --exec \"npm test\""
   },
   "repository": {
