--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "export NODE_ENV=test || \"SET NODE_ENV=test\"&& mocha --recursive muber",
+    "test": " NODE_ENV=test  mocha --recursive muber/",
     "test-watch": "nodemon --exec \"npm test\""
   },
   "repository": {
